--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -273,30 +273,31 @@
 //## For each of Bootstrap's buttons, define text, background and border color.
 
 @btn-font-weight:                normal;
+@btn-border:                     #000;
 
 @btn-default-color:              @text-color;
 @btn-default-bg:                 @gray;
-@btn-default-border:             @btn-default-bg;
+@btn-default-border:             @btn-border;
 
 @btn-primary-color:              #fff;
 @btn-primary-bg:                 @brand-primary;
-@btn-primary-border:             @btn-primary-color;
+@btn-primary-border:             @btn-border;
 
 @btn-success-color:              @btn-primary-color;
 @btn-success-bg:                 @brand-success;
-@btn-success-border:             @btn-success-bg;
+@btn-success-border:             @btn-border;
 
 @btn-info-color:                 @btn-success-color;
 @btn-info-bg:                    @brand-info;
-@btn-info-border:                @btn-info-bg;
+@btn-info-border:                @btn-border;
 
 @btn-warning-color:              @btn-success-color;
 @btn-warning-bg:                 @brand-warning;
-@btn-warning-border:             @btn-warning-bg;
+@btn-warning-border:             @btn-border;
 
 @btn-danger-color:               @btn-success-color;
 @btn-danger-bg:                  @brand-danger;
-@btn-danger-border:              @btn-danger-bg;
+@btn-danger-border:              @btn-border;
 
 @btn-link-disabled-color:        @gray-light;
 
