PortChaw/OPOSM#881: navbar colors

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -496,7 +496,7 @@
 @navbar-collapse-max-height:       340px;
 
 @navbar-default-color:             #fff;
-@navbar-default-bg:                @brand-primary;
+@navbar-default-bg:                @gray;
 @navbar-default-border:            transparent;
 
 // Navbar links
