--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -273,7 +273,7 @@
 //## For each of Bootstrap's buttons, define text, background and border color.
 
 @btn-font-weight:                normal;
-@btn-border:                     #fff;
+@btn-border:                     #000;
 
 @btn-default-color:              @text-color;
 @btn-default-bg:                 @gray;
